added to gallary

--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mazar Antiques | مزار للأنتيكات - أرقى قطع الديكور والأنتيكات</title>
-    <meta name="description" content="مزار للأنتيكات - وجهتك الأولى لأرقى قطع الديكور والأنتيكات. نوصل لأي مكان ونصنع التصميم الذي تحلم به. جودة عالية وتصاميم فريدة." />
-    <meta name="author" content="Mazar Antiques" />
-    <meta name="keywords" content="أنتيكات, ديكور, فازات, تحف, مزار, antiques, decor, vases" />
 
-    <meta property="og:title" content="Mazar Antiques | مزار للأنتيكات" />
-    <meta property="og:description" content="أرقى قطع الديكور والأنتيكات - نوصل لأي مكان ونصنع التصميم الذي تحلم به" />
+    <title>Mazar Antiqu</title>
+    <meta
+      name="description"
+      content="مزار للأنتيكات - وجهتك الأولى لأرقى قطع الديكور والأنتيكات. نوصل لأي مكان ونصنع التصميم الذي تحلم به. جودة عالية وتصاميم فريدة."
+    />
+    <meta name="author" content="Mazar Antiques" />
+    <meta
+      name="keywords"
+      content="أنتيكات, ديكور, فازات, تحف, مزار, antiques, decor, vases"
+    />
+
+    <meta property="og:title" content="Mazar Antiques " />
+    <meta
+      property="og:description"
+      content="أرقى قطع الديكور والأنتيكات - نوصل لأي مكان ونصنع التصميم الذي تحلم به"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mazar Antiques | مزار للأنتيكات" />
-    <meta name="twitter:description" content="أرقى قطع الديكور والأنتيكات - نوصل لأي مكان ونصنع التصميم الذي تحلم به" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta
+      name="twitter:description"
+      content="أرقى قطع الديكور والأنتيكات - نوصل لأي مكان ونصنع التصميم الذي تحلم به"
+    />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
+
     <link rel="canonical" href="https://mazar-antiques.com" />
   </head>
 
